--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  color: lightblue;
+  color: lightgrey;
+  min-height: 100vh;
 }
 
 .container {
-  position: relative;
+  /* z-index: 22; */
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 100px;
+  background-color: #001f7c38;
+  min-height: 100vh;
 }
 
 .back-vid {
@@ -24,7 +28,236 @@ body {
   height: 100%;
   object-fit: cover; /* THIS fills the video while maintaining aspect */
   z-index: -1;
-  mix-blend-mode: overlay;
+  mix-blend-mode: lighten;
+}
+
+header {
+  flex-wrap: wrap;
+  gap: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+  background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(10px);
+  padding: 0 30px;
+  /* box-shadow: 0 0 15px #72a1de68; */
+  z-index: 999;
+  display: flex;
+}
+.left {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  min-width: 200px;
+}
+.left img {
+  width: 80px;
+  height: 80px;
+  margin: 0 15px;
+}
+header ul {
+  flex-wrap: wrap;
+  width: auto;
+  flex: 1;
+  justify-content: center;
+  display: flex;
+
+  align-items: center;
+  width: 30%;
+  /* gap: 40 px; */
+  padding: 15px 30px;
+  border-radius: 50px;
+  background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px #727fde65;
+}
+
+header ul li {
+  list-style: none;
+}
+
+header ul a {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  padding: 10px 15px;
+  margin: 0 10 px;
+}
+
+.box-icons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.box-icons a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #727fde;
+  text-decoration: none;
+  color: lightgrey;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+
+.box-icons a:hover {
+  background-color: #727fde;
+  color: black;
+  box-shadow: 0 0 15px #727fde65;
+}
+
+.blackhole-box {
+  margin-top: 80px;
+  overflow: hidden;
+  position: relative;
+  top: 0;
+  aspect-ratio: 16/9;
+  width: 100%;
+  justify-content: center;
+  mix-blend-mode: lighten;
+}
+
+.blackhole-box video {
+  /* position: relative; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-top: -23.5%;
+}
+
+.hero {
+  position: absolute;
+  display: flex;
+  width: 95%;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.hero-info .hero-info-title {
+  color: #727fde;
+  padding: 8px 5px;
+  border: 1px solid #727fde77;
+  width: 240px;
+  background-color: #2200493d;
+  box-shadow: 0 0 5px #727fde88;
+  border-radius: 50px;
+}
+
+.hero-info h1 {
+  font-size: 60px;
+  max-width: 600px;
+  font-weight: 700;
+  line-height: 70px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+.hero-info p {
+  max-width: 550px;
+  line-height: 25px;
+  margin-bottom: 40px;
+  font-size: 20px;
+}
+
+.hero-info button {
+  color: white;
+  padding: 15px 35px;
+  border-radius: 10px;
+  border: 1px solid #727fdeb4;
+  background-color: #2200493d;
+  box-shadow: 0 0 5px #727fde86;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.hero-info button:hover {
+  box-shadow: 0 0 15px #727fde86;
+}
+
+.gradient {
+  background: linear-gradient(
+    to right,
+    #008baa,
+    #7e42a7,
+    #6600c5,
+    #6070fd,
+    #2a46ff,
+    #0099ff,
+    #008ead
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate-gradient 2.5s linear infinite;
+}
+@keyframes animate-gradient {
+  to {
+    background-position: 200%;
+  }
+}
+
+.hero-vid-box {
+  position: absolute;
+  right: 3%;
+  z-index: -1;
+}
+
+.hero-vid-box video {
+  height: 900px;
+}
+
+.scroll-down {
+  height: 50px;
+  width: 30px;
+  border: 2px solid lightgray;
+  position: absolute;
+  left: 49%;
+  bottom: 8%;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0 0 15px rgba(211, 211, 211, 0.477);
+}
+.scroll-down::before,
+.scroll-down::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  border: 2px solid lightgray;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 2s ease-in-out infinite;
+}
+
+.scroll-down::before {
+  top: 30%;
+  animation-delay: 0.5s;
+}
+
+@keyframes scroll-down {
+  0% {
+    opacity: 0;
+  }
+  30%,
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
+  }
 }
 
 /* @media (max-aspect-ratio: 16/9) {
