--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   gap: 100px;
   background-color: #001f7c38;
   min-height: 100vh;
+  z-index: 2;
 }
 
 .back-vid {
@@ -123,14 +124,16 @@ header ul a {
   width: 100%;
   justify-content: center;
   mix-blend-mode: lighten;
+  z-index: 0;
 }
-
 .blackhole-box video {
-  /* position: relative; */
   width: 100%;
   height: 100%;
   object-fit: cover;
   margin-top: -23.5%;
+  position: fixed;
+  z-index: 1;
+  /* position: absolute; */
 }
 
 .hero {
@@ -208,11 +211,11 @@ header ul a {
 .hero-vid-box {
   position: absolute;
   right: 3%;
-  z-index: -1;
 }
 
 .hero-vid-box video {
   height: 900px;
+  mix-blend-mode: lighten;
 }
 
 .scroll-down {
@@ -260,6 +263,235 @@ header ul a {
   }
 }
 
+.info-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin-top: 100%;
+  z-index: 2;
+}
+.section-tile {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.info-cards {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+  margin-top: 30px;
+}
+.card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  position: relative;
+  width: auto;
+  height: 40vh;
+  overflow: hidden;
+  border: 1px solid gray;
+  background-color: #080020b7;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+.card img {
+  width: 80%;
+  height: 50%;
+  object-fit: cover;
+}
+.card h1 {
+  position: absolute;
+  margin: 0;
+  bottom: 40%;
+  left: 5%;
+  font-size: 25px;
+  z-index: 1;
+  color: lightgray;
+}
+.card p {
+  position: absolute;
+  bottom: 3%;
+  left: 5%;
+  z-index: 1;
+  max-width: 300px;
+  color: grey;
+  font-size: 13px;
+  line-height: 20px;
+}
+.card video {
+  margin-top: 10%;
+  width: 70%;
+  height: 50%;
+  object-fit: cover;
+  mix-blend-mode: lighten;
+}
+
+.card button {
+  color: white;
+  padding: 5px 15px;
+  border-radius: 10px;
+  border: 1px solid #727fdeb4;
+  background-color: #2200493d;
+  box-shadow: 0 0 5px #727fde86;
+  cursor: pointer;
+  transition: 0.3s;
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+}
+
+.card button :hover {
+  box-shadow: 0 0 15px #727fde86;
+  opacity: 0.7;
+}
+.card:hover {
+  box-shadow: 0 0 15px rgba(211, 211, 211, 0.573);
+}
+
+.card:nth-child(3) {
+  grid-row: span 2;
+  height: 83vh;
+}
+.card:nth-child(3) p {
+  bottom: 12%;
+}
+
+.card:nth-child(3) h1 {
+  bottom: 21%;
+}
+.card:nth-child(4) {
+  grid-column: span 2;
+}
+
+.card:nth-child(4)p {
+  max-width: 650px;
+}
+
+.card:nth-child(4) h1 {
+  bottom: 35%;
+}
+.my-projects {
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+  align-items: center;
+  position: relative;
+  width: 80%;
+  height: 100vh;
+  margin-top: 200px;
+  margin-bottom: 700px;
+  z-index: 2;
+}
+
+.project-card {
+  display: flex;
+  width: 100%;
+  height: 40%;
+  align-items: center;
+  gap: 10%;
+  justify-content: center;
+}
+.project-vidbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  position: relative;
+  cursor: pointer;
+  min-width: 400px;
+  transition: 0.5s;
+  mix-blend-mode: exclusion;
+}
+
+.project-vidbox video {
+  object-fit: cover;
+  width: 100%;
+  box-shadow: 0 0 10px lightgray;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.project-vidbox video:hover {
+  box-shadow: 0 0 20px lightgray;
+}
+.project-info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  width: 50%;
+  padding-left: 10%;
+}
+
+.project-info h1 {
+  width: 90%;
+  font-size: 25px;
+  font-weight: bold;
+  white-space: nowrap; /* Corrected from text-wrap: nowrap; */
+  margin-bottom: 10px;
+  margin-top: 0;
+  max-width: 450px;
+}
+.project-info p {
+  width: 90%;
+  max-width: 400px;
+  min-width: 300px;
+  margin-bottom: 50px;
+  margin-top: 0;
+}
+
+.project-info button {
+  color: white;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 1px solid #727fdeb4;
+  background-color: #2200493d;
+  box-shadow: 0 0 5px #727fde86;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.project-info button :hover {
+  box-shadow: 0 0 15px #727fde86;
+  opacity: 0.7;
+}
+
+.hover-sign {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  height: 100px;
+}
+
+.hover-sign::before,
+.hover-sign::after {
+  content: "👆";
+  text-align: center;
+  position: absolute;
+  font-size: 50px;
+  top: 20%;
+  left: 40%;
+  border-radius: 50%;
+  animation: hoverAnimation 3s ease-in-out infinite;
+}
+
+@keyframes hoverAnimation {
+  0% {
+    box-shadow: 0 0 5px lightgray;
+    transform: translate(100%, 50%) rotate(30deg);
+  }
+  100% {
+    box-shadow: 0 0 15px lightgrey;
+    transform: translateX(80%, 50%) rotate(0deg);
+  }
+}
+
+.hover-sign.active {
+  display: none;
+}
 /* @media (max-aspect-ratio: 16/9) {
     .back-vid {
       width: 100%;
