--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ header ul a {
   align-items: center;
   position: relative;
   width: 80%;
-  height: 100vh;
+  height: auto;
   margin-top: 200px;
   margin-bottom: 700px;
   z-index: 2;
@@ -492,15 +492,229 @@ header ul a {
 .hover-sign.active {
   display: none;
 }
-/* @media (max-aspect-ratio: 16/9) {
-    .back-vid {
-      width: 100%;
-      height: auto;
-    }
+.skills-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-bottom: 100px;
+}
+
+.skills-box {
+  width: 100%;
+  min-height: 50vh;
+  /* height: 20vh; */
+  position: relative;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.skills-image {
+  width: 70%;
+
+  mix-blend-mode: lighten;
+  opacity: 0.7;
+}
+.designer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  top: 25%;
+  left: 5%;
+  max-width: 300px;
+}
+
+.coder {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  top: 25%;
+  right: 5%;
+  max-width: 300px;
+}
+
+.skills-box h1 {
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+}
+.skills-box p {
+  line-height: 23px;
+}
+.slider {
+  position: absolute;
+  bottom: 5%;
+  right: 20%;
+  width: 60%;
+  height: var(--height);
+  overflow: hidden;
+  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+  mix-blend-mode: difference;
+  opacity: 0.8;
+}
+.slider .list {
+  display: flex;
+  width: 100%;
+  min-width: calc(var(--width) * var(--quantity));
+  position: relative;
+}
+
+.slider .list .item {
+  width: var(--width);
+  height: var(--height);
+  position: absolute;
+  left: 100%;
+  animation: autoRun 10s linear infinite;
+  transition: filter 0.5s;
+  animation-delay: calc(
+    (10s / var(--quantity)) * (var(--position) - 1) - 10s
+  ) !important;
+}
+.slider .list .item img {
+  width: 100%;
+}
+
+@keyframes autoRun {
+  from {
+    left: 100%;
   }
-  @media (min-aspect-ratio: 16/9) {
-    .back-vid {
-      width: 100%;
-      height: auto;
-    }
-  } */
+  to {
+    left: calc(var(--width) * -1);
+  }
+}
+
+.slider:hover .item {
+  animation-play-state: paused !important;
+  filter: grayscale(1);
+}
+.slider .item:hover {
+  filter: grayscale(0);
+}
+.contact-section {
+  width: 80%;
+  min-height: 100vh;
+  display: flex;
+
+  justify-content: center;
+  gap: 5%;
+  align-items: center;
+  position: relative;
+}
+
+.contact-section h1 {
+  position: relative;
+  font-size: 30px;
+  text-align: center;
+
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.social-box {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.social-box a {
+  color: lightgray;
+  text-decoration: none;
+  font-size: 25px;
+  text-wrap: nowrap;
+}
+.social-box i {
+  color: #727fde;
+  font-size: 30px;
+  margin-right: 10px;
+}
+.social-icons a i {
+  color: white;
+  margin-top: 40px;
+}
+
+.contact-box p {
+  max-width: 400px;
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+.contact-box input {
+  padding: 7.5px 30px;
+  background-color: lightgray;
+  width: 80%;
+  height: 25px;
+  border: none;
+  outline: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.contact-box button {
+  margin-top: 30px;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 1px solid #727fdeb4;
+  background-color: #2200493d;
+  box-shadow: 0 0 5px #727fde86;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.contact-box button:hover {
+  box-shadow: 0 0 15px #727fde86;
+  opacity: 0.7;
+}
+/* @media (max-aspect-ratio: 16/9) {
+  .back-vid {
+    width: 100%;
+    height: auto;
+  }
+}
+@media (min-aspect-ratio: 16/9) {
+  .back-vid {
+    width: 100%;
+    height: auto;
+  }
+} */
+footer {
+  display: flex;
+  margin-top: auto;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+  background-color: rgba(255, 255, 255, 0.177);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.503);
+  z-index: 999;
+  width: 100%;
+}
+
+footer h1 {
+  font-size: 16px;
+  margin: 0;
+}
+.autoBlur {
+  animation: autoBlurAnimation linear both;
+  animation-timeline: view();
+}
+
+@keyframes autoBlurAnimation {
+  0% {
+    filter: blur(40px);
+    opacity: 0;
+  }
+  35%,
+  65% {
+    filter: blur(0);
+    opacity: 1;
+  }
+  100% {
+    filter: blur(40px);
+    opacity: 0;
+  }
+}
