--- a/style.css
+++ b/style.css
@@ -718,3 +718,41 @@ footer h1 {
     opacity: 0;
   }
 }
+.autoDisplay {
+  animation: autoDisplayAnimation both;
+  animation-timeline: view();
+}
+
+@keyframes autoDisplayAnimation {
+  from {
+    filter: blur(10px);
+    transform: translateY(-200px) scale(0);
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0) scale(1);
+  }
+}
+.fadeInRight {
+  animation: fadeInAnimation both;
+  animation-timeline: view();
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+    transform: translateX(-500px) scale(0.2);
+    filter: blur(20px);
+  }
+  35%,
+  65% {
+    opacity: 1;
+    transform: translateX(8px) scale(1);
+    filter: blur(0);
+  }
+  100% {
+    filter: blur(20px);
+  }
+}
